Closed Bug 632341 Opened 15 years ago Closed 14 years ago

###!!! ASSERTION: Shutdown called when mLibrary is null?: 'mLibrary'

Categories

(Core :: Widget: Win32, defect)

x86
Windows Vista
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Assigned: dougt)

References

Details

(Keywords: assertion)

Attachments

(1 file)

Steps to reproduce problem: 1. View an accelerator-enabled page 2. View a different page
Keywords: assertion
I've hit this while fuzzing.
###!!! ASSERTION: Shutdown called when mLibrary is null?: 'mLibrary', file dom/system/windows/nsDeviceMotionSystem.cpp, line 101
Assignee: nobody → doug.turner
Attached patch patch v.1Splinter Review
On some windows boxes, sensor.dll isn't present. This causes Startup() to fail -- which is fine. The problem though, is when Shutdown() is called, we assert that mLibrary (which is the handle to the dll) is null. This is clearly bogus.
Attachment #546193 - Flags: review?(blassey.bugs)
Comment on attachment 546193 [details] [diff] [review] patch v.1 Review of attachment 546193 [details] [diff] [review]: -----------------------------------------------------------------
Attachment #546193 - Flags: review?(blassey.bugs) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: