Bug 632341 - Fix bogus assertion in the case where there is no sensor.dll. ASSERTION: Shutdown called when mLibrary is null. r=blassey