dom/system/windows/nsDeviceMotionSystem.cpp
@@ -98,7 +98,9 @@ ThinkPadSensor::Startup()
 void
 ThinkPadSensor::Shutdown()
 {
-  NS_ASSERTION(mLibrary, "Shutdown called when mLibrary is null?");
+  if (mLibrary == nsnull)
+    return;
+
   FreeLibrary(mLibrary);
   mLibrary = nsnull;
   gShockproofGetAccelerometerData = nsnull;
